--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,12 @@ dependencies:
   flutter:
     sdk: flutter
   http: ^1.1.0 
-  shared_preferences: ^2.0.9 
+  dio: ^4.0.0
+  shared_preferences: ^2.0.7
+  intl: ^0.17.0
+  provider: ^5.0.0
+
+ 
   
 
 
