--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter  
   http: ^1.1.0 
   dio: ^4.0.0
   shared_preferences: ^2.0.7
-  intl: ^0.17.0
+  intl: ^0.18.0
   provider: ^5.0.0
   fl_chart: ^0.63.0
+  web_socket_channel: ^2.1.0
+  firebase_core: ^2.17.0
+  firebase_auth: ^4.10.1
+  firebase_messaging: ^14.6.1
+  rflutter_alert: ^2.0.7
+
+
+
 
 
  
@@ -46,6 +56,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  firebase_in_app_messaging: ^0.7.4+1
 
 dev_dependencies:
   flutter_test:
